Add template for phd dissertation class option to main.tex

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 % Switch this line to the final option when submitting your thesis.
 % This will correct counts and remove labels that are shown during draft mode
 \documentclass[masters,draft]{UTRGVthesis}
+%\documentclass[phd,draft]{UTRGVthesis}
 %\documentclass[masters,final]{UTRGVthesis}
 %\documentclass[masters,final, nodedication, noacknowledgments]{UTRGVthesis}
 
