Add blank page only if odd # of pages in Abstract

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -190,6 +190,7 @@
     }
 
     \newcommand{\abstractpage}{%
+        \setcounter{pagebegin}{\value{page}} %get value of first page
         \newgeometry{top=2in, bottom=1in, left=1in, right=1in}
         \thispagestyle{fancy}
         {\centering%
@@ -227,7 +228,11 @@
         \vfill
 
         \restoregeometry
-        \insertblankpage
+        % keep track of pages
+        \setcounter{pagedifference}{\value{pagebegin} - \value{page}}
+        \ifodd \value{pagedifference}
+          \insertblankpage % insert blank page only if odd number of pages
+        \fi
     }
 
 
