Update abstract to refer to the num of titles cited
The thesis manual asks that the abstract include "the number of titles included in the bibliography".

Addresses #9

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -237,8 +237,7 @@
             {\ifnum\totvalue{figurenum}=1 \total{figurenum}~figure,\else
               \total{figurenum}~figures,\fi}
           \fi
-          \total{citesnum}~references,
-          \total{bibnum}~titles.
+          \total{bibnum}~references.
 
         \UTRGVField@Abstract\par
       }
