--- a/main.tex
+++ b/main.tex
@@ -106,7 +106,8 @@ A brief biographical sketch of the student is required as part of each thesis.
 
 
 
-\begin{document}
+\begin{document}{
+   $
 
 % This starts page counting in Roman numerals
 \frontmatter
