Fix spacing in introduction.tex to fix failed Lint
Was getting an error during Linting (Github Action) due to spacing
that could "cause incorrect pagereferences"

--- a/introduction.tex
+++ b/introduction.tex
@@ -20,7 +20,7 @@ tomography\cite{Garza:2011fk}
 \begin{figure}
   \centering
   \includegraphics[scale=0.5]{figures/beamfootprint}
-  \caption[Colorful Picture]{This is a colorful picture.}
+  \caption[Colorful Picture]{This is a colorful picture.}%
   \label{fig:flyover}
 \end{figure}
 
@@ -41,6 +41,6 @@ Emu       & stuffed     & 33.33      \\
 Armadillo & frozen      & 8.99       \\
 \bottomrule
 \end{tabular}
-  \caption[Table Example]{This table shows some data}
+  \caption[Table Example]{This table shows some data}%
   \label{tab:myfirsttable}
 \end{table}
