--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -209,10 +209,12 @@
 
     \newcommand{\abstractpage}{%
         \setcounter{pagebegin}{\value{page}} %get value of first page
-        \newgeometry{top=2in, bottom=1in, left=1in, right=1in}
+        \newgeometry{top=1in, bottom=1in, left=1in, right=1in}
         \thispagestyle{fancy}
         {\centering%
-        ABSTRACT\\
+        \rule{0pt}{1.15in} % spacer to bring down the Abstract text
+        ABSTRACT
+        \rule{0pt}{1.15in} % spacer to bring down the Abstract text
         \vspace{\baselineskip}
         \par
         }
