Fix numbering for tables appearing in appendices
Previously tables were numbered as 1.1.  After this they are numbered as A.1

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -535,6 +535,7 @@
 \let\TEMPappendix\appendix
 \renewcommand{\appendix}{%
   \renewcommand\thefigure{\Alph{chapter}.\arabic{figure}}
+  \renewcommand\thetable{\Alph{chapter}.\arabic{table}}
   \inappendixtrue
   \setcounter{chapter}{0}%
   \setcounter{section}{0}%
