Fix numbering for Appendices in the TOC
Fixes a mistake in a previous commit where the first Appendix
wasn't numbered in the TOC.

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -570,7 +570,6 @@
 \newcounter{appendixtracker}
 
 \newcommand\preappendix{
-  \setcounter{appendixtracker}{\value{chapter}} % captures chapter counter
   \stepcounter{appendixtracker} % uses correct chapter counter before it is set
   \newpage
   \thispagestyle{fancy}%
@@ -579,7 +578,7 @@
   \vfill
   APPENDIX~\Alph{appendixtracker}
   \addcontentsline{toc}{chapter}%
-     {APPENDIX~\Alph{chapter}}%
+     {APPENDIX~\Alph{appendixtracker}}%
   \vspace{1.25\baselineskip}
   \vfill
   \par
