Change bibname from BIBLIOGRAPHY to REFERENCES

--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,7 @@
 
 % this sets the name of the bibliography
 % add \vspace{1cm} here to adjust vertical spacing after bibliography title
-\renewcommand{\bibname}{BIBLIOGRAPHY}
+\renewcommand{\bibname}{REFERENCES}
 
 
 % Insert your name and major here in the format shown
